# lab3-tablas-hash

./: .gitignore  CMakeLists.txt  README.md
data/: README.md  sample_tweets.csv
docs/: Entregable_3_Tablas_Hash.md
docs/experimentacion_example/: heapsort_v1.cpp  heapsort_v2.cpp  priorityQueue.h  run_experiments.sh
docs/roles/: rol_a_repositorio_y_hashing_abierto.md  rol_b_hashing_cerrado_linear_quadratic.md  rol_c_double_hashing_stl_benchmark.md
hash_cerrado_linear_y_quadratic_probing/: load_dataset.cpp  load_dataset.h  main.cpp  tabla_hash.cpp  tabla_hash.h
include/benchmark/: README.md  benchmark_runner.hpp
include/chaining/: chaining_hash_table.hpp
include/closed/: README.md  double_hash_table.hpp  probing_hash_table.hpp
include/common/: dataset_reader.hpp  dataset_types.hpp  experiment_config.hpp  hash_functions.hpp  hash_table_contract.md  memory_utils.hpp  prime_utils.hpp
include/stl/: README.md  unordered_map_adapter.hpp
results/: README.md  benchmark_results.csv  benchmark_summary.csv
scripts/: run_full_benchmark.sh  run_role_c_benchmark.sh  summarize_benchmark.py
src/: benchmark_main.cpp  dataset_reader.cpp
tests/: benchmark_tests.cpp  double_hash_tests.cpp  hash_tests.cpp  probing_hash_tests.cpp  unordered_map_adapter_tests.cpp
